--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="btnD">-</string>
     <string name="todo">TODO</string>
     <string name="msg_token_fmt">BOH</string>
+    <string name="msg_subscribed">Prihvacen upis na grupu</string>
+    <string name="msg_subscribe_failed">Failed to subscribe</string>
 </resources>
