Commit OK. Tutto bene. Messageew works bau not yet completely. App OK!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="msg_token_fmt">BOH</string>
     <string name="msg_subscribed">Prihvacen upis na grupu</string>
     <string name="msg_subscribe_failed">Failed to subscribe</string>
+    <string name="default_notification_channel_id">pojma nemam o cemu se radi</string>
 </resources>
