--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="btnC">$</string>
     <string name="btnD">-</string>
     <string name="todo">TODO</string>
-    <string name="msg_token_fmt">BOH</string>
-    <string name="msg_subscribed">Prihvacen upis na grupu</string>
+    <string name="msg_token_fmt">"Token is ->     %s"</string>
+    <string name="msg_subscribed">Prihvacen upis na grupu allDevices</string>
     <string name="msg_subscribe_failed">Failed to subscribe</string>
     <string name="default_notification_channel_id">pojma nemam o cemu se radi</string>
     <string name="title">Title</string>
