--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="back_btn_info_activity">Back btn info activity</string>
     <string name="title_molitve_list">Items</string>
     <string name="title_molitve_detail">Molitve Detail</string>
+    <string name="back_btn_molitve_activity">back_btn_molitve_activity</string>
 
 </resources>
