--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="title_molitve_detail">Molitve Detail</string>
     <string name="back_btn_molitve_activity">back_btn_molitve_activity</string>
     <string name="ikona_za_molitvu">ikona za molitvu</string>
+    <string name="textview_odgovor">TextView odgovor</string>
+    <string name="textview_pitanje">TextView pitanje</string>
 
 </resources>
